theme/static/theme.scss
@use "pico/pico" with (
    $theme-color: "jade",
    $breakpoints: (
        "xxl": (
            // disable
            "breakpoint": 9999px
        )
    )
);

// Typography

h1,
h2,
h3 {
    font-weight: bold;
}

h1 {
    font-size: 1.7em;
}

h2 {
    font-size: 1.4em;
    margin-top: 30px;
}

h3 {
    font-size: 1.2em;
    margin-top: 25px;
}

a {
    text-decoration: none;
    font-weight: bold;
    outline: 0;
}

// Layout

$desktop: "only screen and (min-width: 960px)";
$handheld: "only screen and (max-width: 959px)";
$mobile: "only screen and (max-width: 767px)";


main {
    display: flex;
    gap: 0.75em;
}

aside {
    flex-shrink: 0;

    h6 {
        margin-top: .75em;
    }
}

img.avatar {
    width: var(--avatar-size);
    height: var(--avatar-size);
    border-radius: var(--avatar-size);
}

article {
    flex: 1 1 auto;
}

article img {
    max-width: 95%;
    margin: 0 auto;
    display: block;

}

.title {
    float: left;
    margin-bottom: 0.5em;
}

.date {
    padding-top: 0.5em;
    float: right;
    display: block;
    color: #555;
}

.content {
    clear: both;

    hr {
        margin: 25px 10px;
    }
}

@media #{$handheld} {
    main {
        --avatar-size: 75px;
        flex-direction: column;
    }

    aside {
        img.avatar {
            float: left;
        }

        nav span {
            font-size: 0;
        }

        li {
            display: inline-block;
            padding: 0 .3em;
        }

        text-align: right;
    }
}

@media #{$desktop} {
    main {
        --avatar-size: 150px;
        flex-direction: row;
        justify-content: center;
    }

    aside {
        width: 20vw;
        min-width: 200px;
        max-width: 250px;
    }

    header {
        display: none;
    }

    aside {
        text-align: center;
    }

    article {
        img.align-left {
            float: left;
            margin-right: 1em;
        }
    }
}

